--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <p class="section__heading">Introduction</p>
           <h1 class="section__title">Fullstack Developer</h1>
           <p class="section__description">
-            I design and develop services for customers of all sizes, specializing in creating stylish, modern websites,
-            web services and online stores.
+            I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and
+            online stores.
           </p>
           <p class="hero__signature">Adrian Sajjan</p>
         </div>
@@ -30,9 +30,8 @@
           <p class="section__heading">About Me</p>
           <h1 class="section__title">Biography</h1>
           <p class="section__description">
-            I'm a Freelancer Front-end Developer with over 12 years of experience. I'm from San Francisco. I code and
-            create web elements for amazing people around the world. I like work with new people. New people are new
-            experiences.
+            I'm a Freelancer Front-end Developer with over 12 years of experience. I'm from San Francisco. I code and create web elements
+            for amazing people around the world. I like work with new people. New people are new experiences.
           </p>
           <div class="about__details-holder">
             <div class="about__details-column">
@@ -99,8 +98,8 @@
                 </div>
                 <h2 class="about__tab-column__card-title">Fullstack Developer Intern</h2>
                 <p class="about__tab-column__card-description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt
-                  consequuntur repellendus cum atque incidunt rerum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt consequuntur repellendus cum
+                  atque incidunt rerum.
                 </p>
               </div>
               <div class="about__tab-column__card">
@@ -110,8 +109,8 @@
                 </div>
                 <h2 class="about__tab-column__card-title">Professional Fullstack Freelancer</h2>
                 <p class="about__tab-column__card-description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt
-                  consequuntur repellendus cum atque incidunt rerum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt consequuntur repellendus cum
+                  atque incidunt rerum.
                 </p>
               </div>
             </div>
@@ -123,8 +122,8 @@
                 </div>
                 <h2 class="about__tab-column__card-title">B.Tech - Computer Science</h2>
                 <p class="about__tab-column__card-description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt
-                  consequuntur repellendus cum atque incidunt rerum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt consequuntur repellendus cum
+                  atque incidunt rerum.
                 </p>
               </div>
               <div class="about__tab-column__card">
@@ -134,8 +133,8 @@
                 </div>
                 <h2 class="about__tab-column__card-title">Post Matriculate - CBSE</h2>
                 <p class="about__tab-column__card-description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt
-                  consequuntur repellendus cum atque incidunt rerum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt consequuntur repellendus cum
+                  atque incidunt rerum.
                 </p>
               </div>
               <div class="about__tab-column__card">
@@ -145,8 +144,8 @@
                 </div>
                 <h2 class="about__tab-column__card-title">Matriculate - CBSE</h2>
                 <p class="about__tab-column__card-description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt
-                  consequuntur repellendus cum atque incidunt rerum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nulla impedit eius maiores sunt consequuntur repellendus cum
+                  atque incidunt rerum.
                 </p>
               </div>
             </div>
@@ -173,27 +172,27 @@
           <div class="portfolio__carousel-track__outer">
             <div id="portfolio-track" class="portfolio__carousel-track carousel-track">
               <div class="portfolio__carousel-item">
-                <img src="https://picsum.photos/370/280" alt="carousel" class="portfolio__carousel-image" />
+                <img draggable="false" src="https://picsum.photos/370/280" alt="carousel" class="portfolio__carousel-image" />
                 <p class="portfolio__carousel-subtitle">Web App</p>
                 <h3 class="portfolio__carousel-title">Stories!</h3>
               </div>
               <div class="portfolio__carousel-item">
-                <img src="https://picsum.photos/371/280" alt="carousel" class="portfolio__carousel-image" />
+                <img draggable="false" src="https://picsum.photos/371/280" alt="carousel" class="portfolio__carousel-image" />
                 <p class="portfolio__carousel-subtitle">Landing Page</p>
                 <h3 class="portfolio__carousel-title">Shortly</h3>
               </div>
               <div class="portfolio__carousel-item">
-                <img src="https://picsum.photos/370/281" alt="carousel" class="portfolio__carousel-image" />
+                <img draggable="false" src="https://picsum.photos/370/281" alt="carousel" class="portfolio__carousel-image" />
                 <p class="portfolio__carousel-subtitle">Mobile App</p>
                 <h3 class="portfolio__carousel-title">Montra</h3>
               </div>
               <div class="portfolio__carousel-item">
-                <img src="https://picsum.photos/369/280" alt="carousel" class="portfolio__carousel-image" />
+                <img draggable="false" src="https://picsum.photos/369/280" alt="carousel" class="portfolio__carousel-image" />
                 <p class="portfolio__carousel-subtitle">Landing Page</p>
                 <h3 class="portfolio__carousel-title">MyTeam</h3>
               </div>
               <div class="portfolio__carousel-item">
-                <img src="https://picsum.photos/370/279" alt="carousel" class="portfolio__carousel-image" />
+                <img draggable="false" src="https://picsum.photos/370/279" alt="carousel" class="portfolio__carousel-image" />
                 <p class="portfolio__carousel-subtitle">Mobile App</p>
                 <h3 class="portfolio__carousel-title">CECV</h3>
               </div>
