Working on Services

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           </div>
         </div>
         <div class="portfolio__carousel">
-          <div class="portfolio__carousel-track__outer">
-            <div id="portfolio-track" class="portfolio__carousel-track carousel-track">
+          <div class="portfolio__carousel-track__outer carousel-track">
+            <div id="portfolio-track" class="portfolio__carousel-track">
               <div class="portfolio__carousel-item">
                 <img draggable="false" src="https://picsum.photos/370/280" alt="carousel" class="portfolio__carousel-image" />
                 <p class="portfolio__carousel-subtitle">Web App</p>
@@ -195,6 +195,56 @@
                 <img draggable="false" src="https://picsum.photos/370/279" alt="carousel" class="portfolio__carousel-image" />
                 <p class="portfolio__carousel-subtitle">Mobile App</p>
                 <h3 class="portfolio__carousel-title">CECV</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="services">
+        <div class="container">
+          <p class="section__heading">Services</p>
+          <h1 class="section__title">What I Do</h1>
+          <p class="section__description">
+            I help ambitious businesses like yours generate more profits by building awareness, driving web traffic, connecting with
+            customers and growing overall sale.
+          </p>
+          <div class="services__cards">
+            <div class="services__card">
+              <div class="services__card-left">
+                <h2 class="services__card-title">Web App Development</h2>
+                <p class="services__card-description">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit doloremque labore minima quibusdam temporibus quis?
+                </p>
+              </div>
+              <div class="services__card-right">
+                <p class="services__card-price">Starts from</p>
+                <h3 class="services__card-amount">Rs. 70,000</h3>
+              </div>
+            </div>
+            <div class="services__card">
+              <div class="services__card-left">
+                <h2 class="services__card-title">Mobile App Development</h2>
+                <p class="services__card-description">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis qui est culpa possimus similique incidunt a mollitia
+                  quae?
+                </p>
+              </div>
+              <div class="services__card-right">
+                <p class="services__card-price">Starts from</p>
+                <h3 class="services__card-amount">Rs. 1,20,000</h3>
+              </div>
+            </div>
+            <div class="services__card">
+              <div class="services__card-left">
+                <h2 class="services__card-title">Landing Page Design</h2>
+                <p class="services__card-description">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci in similique sunt saepe consequuntur suscipit vero id
+                  aliquid, laborum eveniet.
+                </p>
+              </div>
+              <div class="services__card-right">
+                <p class="services__card-price">Starts from</p>
+                <h3 class="services__card-amount">Rs. 20,000</h3>
               </div>
             </div>
           </div>
