Added Contact Form

--- a/index.html
+++ b/index.html
@@ -250,6 +250,46 @@
           </div>
         </div>
       </section>
+      <!-- <section class="customers">
+        <div class="container">
+          <p class="section__heading">Customers</p>
+          <h1 class="section__title">Happy People</h1>
+        </div>
+      </section> -->
+      <section class="contact">
+        <div class="container">
+          <p class="section__heading">Contact</p>
+          <h1 class="section__title">Get In Touch</h1>
+          <p class="section__description">
+            If you have any suggestion, project or even you want to say “hello”, please fill out the form below and I will reply you
+            shortly.
+          </p>
+          <form class="contact__form">
+            <div class="field-row">
+              <div class="field">
+                <input class="input" type="text" name="name" />
+                <span class="label">Name *</span>
+              </div>
+              <div class="field">
+                <input class="input" type="email" name="email" />
+                <span class="label">Email *</span>
+              </div>
+            </div>
+            <div class="field">
+              <input class="input" type="text" name="phone" />
+              <span class="label">Phone Number</span>
+            </div>
+            <div class="field">
+              <textarea class="input" name="message" rows="10"></textarea>
+              <span class="label">Message *</span>
+            </div>
+            <div>
+              <a href="#" class="submit">Send Message</a>
+            </div>
+          </form>
+        </div>
+      </section>
+      <footer class="footer"></footer>
     </main>
     <aside class="sidebar">
       <a class="sidebar__menu">
@@ -279,5 +319,6 @@
     <script src="scripts/scroll.js"></script>
     <script src="scripts/tabs.js"></script>
     <script src="scripts/carousel.js"></script>
+    <script src="scripts/input.js"></script>
   </body>
 </html>
