--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <p class="section__heading">About Me</p>
           <h1 class="section__title">Biography</h1>
           <p class="section__description">
-            I'm a Freelancer Front-end Developer with over 12 years of experience. I'm from San Francisco. I code and create web elements
-            for amazing people around the world. I like work with new people. New people are new experiences.
+            I'm a Freelancer Fullstack Developer with over 3 years of experience. I'm from Kolkata, India. I code and create web and mobile
+            for amazing people around the world.
           </p>
           <div class="about__details-holder">
             <div class="about__details-column">
@@ -287,9 +287,26 @@
               <a href="#" class="submit">Send Message</a>
             </div>
           </form>
+          <div class="contact__info">
+            <p class="contact__info-label">Address</p>
+            <h3 class="contact__info-value">Sisirkunja P 1/10 1D, Madhyamgram, India</h3>
+            <p class="contact__info-label">Phone</p>
+            <h3 class="contact__info-value">+91 973 320 3125</h3>
+            <a href="mailto:adriansajjan2001@gmail.com" class="contact__info-link">adriansajjan2001@gmail.com</a>
+          </div>
         </div>
       </section>
-      <footer class="footer"></footer>
+      <section class="footer">
+        <div class="footer__content">
+          <div class="container">
+            <p>
+              Copyright © 2021. All rights reserved.
+              <br />
+              Developed by Adrian Sajjan
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <aside class="sidebar">
       <a class="sidebar__menu">
@@ -299,7 +316,7 @@
       <div class="sidebar__image-wrapper">
         <div class="sidebar__image-border__tall"></div>
         <div class="sidebar__image-border__wide"></div>
-        <img src="images/profile.webp" alt="Adrian Sajjan" class="sidebar__image" />
+        <img src="images/profile-1.webp" alt="Adrian Sajjan" class="sidebar__image" />
         <div class="sidebar__title-holder">
           <h5 class="sidebar__title">Hi There! I Am</h5>
           <h3 class="sidebar__animated-title">
