--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
               <a id="experience" class="about__tab active">Experience</a>
               <div class="about__tab-divider"></div>
               <a id="education" class="about__tab">Education</a>
-              <div class="about__tab-divider"></div>
-              <a id="skills" class="about__tab">Skills</a>
+              <!-- <div class="about__tab-divider"></div>
+              <a id="skills" class="about__tab">Skills</a> -->
             </div>
             <div data-tab="experience" class="about__tab-column">
               <div class="about__tab-column__card">
@@ -205,67 +205,10 @@
                 <div class="portfolio__carousel-content">
                   <h3 class="portfolio__carousel-title">Stories!</h3>
                   <div class="portfolio__carousel-actions">
-                    <a href="https://www.google.com" class="portfolio__carousel-icon">
+                    <a href="https://stories-codex.herokuapp.com" target="_blank" class="portfolio__carousel-icon">
                       <i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i>
                     </a>
-                    <a href="https://www.github.com" class="portfolio__carousel-icon">
-                      <i class="fa-brands fa-github fa-lg"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="portfolio__carousel-item">
-                <img draggable="false" src="images/shortly.png" alt="carousel" class="portfolio__carousel-image" />
-                <div class="portfolio__carousel-tag">
-                  <span>Landing Page</span>
-                  <span>HTML5</span>
-                  <span>CSS3</span>
-                </div>
-                <div class="portfolio__carousel-content">
-                  <h3 class="portfolio__carousel-title">Shortly</h3>
-                  <div class="portfolio__carousel-actions">
-                    <a href="https://www.google.com" class="portfolio__carousel-icon">
-                      <i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i>
-                    </a>
-                    <a href="https://www.github.com" class="portfolio__carousel-icon">
-                      <i class="fa-brands fa-github fa-lg"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="portfolio__carousel-item">
-                <img draggable="false" src="images/insure.png" alt="carousel" class="portfolio__carousel-image" />
-                <div class="portfolio__carousel-tag">
-                  <span>Landing Page</span>
-                  <span>HTML5</span>
-                  <span>CSS3</span>
-                </div>
-                <div class="portfolio__carousel-content">
-                  <h3 class="portfolio__carousel-title">Insure</h3>
-                  <div class="portfolio__carousel-actions">
-                    <a href="https://www.google.com" class="portfolio__carousel-icon">
-                      <i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i>
-                    </a>
-                    <a href="https://www.github.com" class="portfolio__carousel-icon">
-                      <i class="fa-brands fa-github fa-lg"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="portfolio__carousel-item">
-                <img draggable="false" src="images/myteam.png" alt="carousel" class="portfolio__carousel-image" />
-                <div class="portfolio__carousel-tag">
-                  <span>Landing Page</span>
-                  <span>HTML5</span>
-                  <span>CSS3</span>
-                </div>
-                <div class="portfolio__carousel-content">
-                  <h3 class="portfolio__carousel-title">My Team</h3>
-                  <div class="portfolio__carousel-actions">
-                    <a href="https://www.google.com" class="portfolio__carousel-icon">
-                      <i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i>
-                    </a>
-                    <a href="https://www.github.com" class="portfolio__carousel-icon">
+                    <a href="https://www.github.com/AdrianSajjan/Stories" target="_blank" class="portfolio__carousel-icon">
                       <i class="fa-brands fa-github fa-lg"></i>
                     </a>
                   </div>
@@ -281,10 +224,64 @@
                 <div class="portfolio__carousel-content">
                   <h3 class="portfolio__carousel-title">CECV</h3>
                   <div class="portfolio__carousel-actions">
-                    <a href="https://www.google.com" class="portfolio__carousel-icon">
+                    <a href="https://www.cecv.in" target="_blank" class="portfolio__carousel-icon">
                       <i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i>
                     </a>
-                    <a href="https://www.github.com" class="portfolio__carousel-icon">
+                  </div>
+                </div>
+              </div>
+              <div class="portfolio__carousel-item">
+                <img draggable="false" src="images/insure.png" alt="carousel" class="portfolio__carousel-image" />
+                <div class="portfolio__carousel-tag">
+                  <span>Landing Page</span>
+                  <span>HTML5</span>
+                  <span>CSS3</span>
+                </div>
+                <div class="portfolio__carousel-content">
+                  <h3 class="portfolio__carousel-title">Insure</h3>
+                  <div class="portfolio__carousel-actions">
+                    <a href="https://insure-virid.vercel.app" target="_blank" class="portfolio__carousel-icon">
+                      <i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i>
+                    </a>
+                    <a href="https://www.github.com/AdrianSajjan/Insure" target="_blank" class="portfolio__carousel-icon">
+                      <i class="fa-brands fa-github fa-lg"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="portfolio__carousel-item">
+                <img draggable="false" src="images/myteam.png" alt="carousel" class="portfolio__carousel-image" />
+                <div class="portfolio__carousel-tag">
+                  <span>Landing Page</span>
+                  <span>HTML5</span>
+                  <span>CSS3</span>
+                </div>
+                <div class="portfolio__carousel-content">
+                  <h3 class="portfolio__carousel-title">My Team</h3>
+                  <div class="portfolio__carousel-actions">
+                    <a href="https://myteam.vercel.app" target="_blank" class="portfolio__carousel-icon">
+                      <i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i>
+                    </a>
+                    <a href="https://www.github.com/AdrianSajjan/My-Team" target="_blank" class="portfolio__carousel-icon">
+                      <i class="fa-brands fa-github fa-lg"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="portfolio__carousel-item">
+                <img draggable="false" src="images/shortly.png" alt="carousel" class="portfolio__carousel-image" />
+                <div class="portfolio__carousel-tag">
+                  <span>Landing Page</span>
+                  <span>HTML5</span>
+                  <span>CSS3</span>
+                </div>
+                <div class="portfolio__carousel-content">
+                  <h3 class="portfolio__carousel-title">Shortly</h3>
+                  <div class="portfolio__carousel-actions">
+                    <a href="https://shortly-beige.vercel.app" target="_blank" class="portfolio__carousel-icon">
+                      <i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i>
+                    </a>
+                    <a href="https://www.github.com/AdrianSajjan/Shortly" target="_blank" class="portfolio__carousel-icon">
                       <i class="fa-brands fa-github fa-lg"></i>
                     </a>
                   </div>
